# GenTL

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  mcmc.cpp  opengen_handcoded.cpp  opengen_ss_example.cpp
include/gentl/inference/: mcmc.h
include/gentl/learning/: supervised.h
tests/: CMakeLists.txt  mcmc.cpp  particle_filter.cpp  sequence.cpp
